 * fixed bug in LaTeX outline ([ 2644609 ])
 * fixed bug in BibTeX outline when grouped by author
 * omit file extension for pdf and eps images and validate them correctly ([ 2793148 ])
 * fixed LaTeX lexer issues ([ 2792736 ])
 * support for user-defined templates
 * search more paths for TeX resources ([ 2795865 ])
 * hiding of box warnings from rubber may now be configured ([ 2795868 ])

0.2 rc1
 * improved support for multi-file documents (fixes [ 2039930 ], [ 2011830 ], [ 2003370 ], [ 1885775 ], [ 1801142 ])
 * improved support for remote files (fixes [ 1875238 ])
 * fixed spell check (fixes [ 2120842 ], [ 2039933 ])
 * brought back forward search in DVI files (fixes [ 2367015 ])
 * configurable highlight colors (fixes [ 2131473 ], [ 2018556 ])
 * rudimentary support for drag'n'drop (fixes [ 1784634 ])
 * rudimentary BibTeX completion
 * fixed LaTeX completion of command arguments (fixes [ 1923717 ])
 * maximum file size for BibTeX parser may be configured (fixes [ 2149254 ], [ 2149189 ])
 * minor fixes ([ 2238342 ], [ 2031271 ], [ 2002630 ], [ 1913496 ], [ 1911116 ], [ 1880327 ], [ 1818707 ])

0.1.3.2
 * fixed licenses so that the plugin can be included into debian etc.

0.2 alpha1
 * new LaTeX parser and object model allowing for:
   * syntax checking the document (unclosed brackets etc.)
   * validating the document:
     * wrong environments (unmatched \begin and \end etc.)
     * undefined or unused labels
     * not existing image files or included documents
     * undefined BibTeX entries
   * extraction of TODO and FIXME comments
   * faster LaTeX parsing
 * new BibTeX parser and object model allowing for:
   * a BibTeX outline that can be grouped by entry type, author or year
   * faster BibTeX parsing
 * "Toggle Comment" instead of "Comment" and "Uncomment"
 * "Use Bibliography" wizard for choosing from recently used bibliographies and BibTeX style preview
 * support for spell checking LaTeX with aspell backend
 * template concept used for: